[gd_scene load_steps=2 format=3 uid="uid://be87n5k6m4l3q"]

[ext_resource type="Script" path="res://scripts/level_button.gd" id="1_script"]

[node name="LevelButton" type="Button"]
custom_minimum_size = Vector2(120, 120)
offset_right = 120.0
offset_bottom = 120.0
pivot_offset = Vector2(60, 60)
flat = true
script = ExtResource("1_script")

[node name="BG" type="ColorRect" parent="."]
show_behind_parent = true
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
color = Color(0, 0, 0, 0.05)

[node name="LevelLabel" type="Label" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -25.0
offset_right = 20.0
offset_bottom = 2.0
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 32
text = "1"
horizontal_alignment = 1

[node name="StarContainer" type="HBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -30.0
offset_top = -40.0
offset_right = 30.0
offset_bottom = -10.0
grow_horizontal = 2
grow_vertical = 0
alignment = 1

[node name="Star1" type="Label" parent="StarContainer"]
layout_mode = 2
text = "‚≠ê"

[node name="Star2" type="Label" parent="StarContainer"]
layout_mode = 2
text = "‚≠ê"

[node name="Star3" type="Label" parent="StarContainer"]
layout_mode = 2
text = "‚≠ê"

[node name="LockIcon" type="Label" parent="."]
visible = false
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -11.5
offset_right = 20.0
offset_bottom = 11.5
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
text = "üîí"
horizontal_alignment = 1

[connection signal="mouse_entered" from="." to="." method="_on_mouse_entered"]
[connection signal="mouse_exited" from="." to="." method="_on_mouse_exited"]
